--- a/main.html
+++ b/main.html
@@ -3,14 +3,43 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<nav>
+		<ul>
+			<li><a href ="#home">Home</a></li>
+			<li><a href ="#About us">About us</a></li>
+			<li><a href ="#Contact us">Contact us</a></li>
+		</ul>
+	</nav>
 
+	<h2>3 random videos</h2>
+
+	<div>
+		<video controls>
+			<source src = "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+			Your browser does not support the video tag.
+		</video>
+	</div>
+
+	<div>
+		<video controls>
+			<source src = "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4">
+			Your browser does not support the video tag.
+		</video>
+	</div>
+
+	<div>
+		<video controls>
+			<source src = "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4">
+			Your browser does not support the video tag.
+		</video>
+	</div>
+	
 </body>
 
 </html>
